[package]
name = "multitool-sdk"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "MultiTool backend API"
license = "All Rights Reserved"
edition = "2021"

[dependencies]
async-trait = "^0.1"
mockall = { version = "^0.13", optional = true }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
[features]
mockall = ["dep:mockall"]
