[package]
name = "multitool-sdk"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "MultiTool backend API"
license = "All Rights Reserved"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
mockall = { version = "^0.13", optional = true }
bon = { version = "2.3", optional = true }
[features]
mockall = ["dep:mockall"]
bon = ["dep:bon"]
